<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ITT Messenger</string>
    <string name="version">1.1</string>
    <!-- <string name="hello_world">Hello world!</string> -->
    <string name="action_settings">Settings</string>
    <string name="itt_messaging">ITT Messenger</string>
    <string name="activiate">Activate</string>
    <string name="truck_id">TID:</string>
    <string name="device_id">Device ID:</string>
    <string name="msg_datetime">Time:</string>
    <string name="update">Update</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="back_to_list">History</string>
    <string name="setting">Setting</string>
    <string name="language">Langauge</string>
    <string name="zhtc">繁體中文</string>
    <string name="zhsc">简体中文</string>
    <string name="en">English</string>
    <string name="contact_us">Contact us</string>
    <string name="no_msg">No new message</string>
    <string name="hotline">Technical Support: 3669 1409</string>
    <string name="setting_underline"><u>Setting</u></string>
    <string name="contactus_underline"><u>ContactUs</u></string>
    <string name="contactus_tech">Technical Support</string>
    <string name="no_connection">No Connection</string>
    <string name="update_tv">New Version Update</string>
    <string name="version_tv">Version:</string>
    <string name="act_contact">2991 8049</string>
    <string name="cosco_contact">2991 8049</string>
    <string name="hit_contact">2619 7957</string>
    <string name="mod_contact">2115 2609</string>
    <string name="dpw_contact">2489 4744</string>
    <string name="not_support">Incompatible device</string>

    <string-array name="language_arr">
        <item>繁體中文</item>
        <item>简体中文</item>
        <item>English</item>
    </string-array>
    <string name="reconnected">Reconnected to network</string>
    <string name="server_connection_failed">Failed to connect to server</string>    

    <!-- login activity -->
    <string name="btn_login">Log In</string>
    <string name="btn_logout">Log Out</string>
    <string name="btn_cancel">Cancel</string>
    <string name="input_hint_tid">TID</string>
    <string name="input_hint_password">Password</string>
    <string name="input_hint_license_number">License Number</string>        
    <string-array name="tractor_provider_arr">
        <item>HIT</item>
        <item>MTL</item>
        <item>CHT</item>
        <item>DPW</item>
        <item>ACT</item>
    </string-array>
    <string name="login_error_invalid_password">Invalid password</string>
    <string name="login_error_invalid_license_number">Invalid license number</string>
    <string name="login_error_truck_not_deployed">[%1$s] is not active in ITT Platform</string>
    <string name="login_error_device_not_authorized">Your device is not authorized to log in</string>
    <string name="login_error_invalid_tid">Invalid TID</string>
    <string name="login_error_conflict_device_id">Your device has been deployed to other truck in ITT Platform.</string>
    <string name="login_error_device_other">Failed to login</string>
    <string name="login_force_logout">Your login session in ITT Platform is replaced by [%1$s]</string>
    <string name="login_timeout">Your login session is expired. Please login again.</string>
    
    <string name="logout_confirm">Are you sure you want to logout?</string>
    <string name="logout_btn_yes">Yes</string>
    <string name="logout_btn_no">No</string>
    
</resources>