<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/mainLayout" >

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:orientation="horizontal" >
<!-- 
        <Button
            android:id="@+id/btnMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/menu"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="20dp" /> -->
            
        <Button
            android:id="@+id/btnMenu"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/menu"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp" />

        <ImageButton
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:src="@drawable/refresh"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="@dimen/main_page_label_size" />

        <TextView
            android:id="@+id/txtTrackID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1.7"
            android:background="@drawable/roundedbg_black"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="3dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:text="@string/truck_id"
            android:textColor="@color/white"
            android:textSize="@dimen/main_page_label_size" />

        <!--
             <TextView
            android:id="@+id/txtDeviceID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundedbg"
            android:gravity="left"
            android:paddingBottom="10dp"
            android:paddingLeft="3dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:text="@string/device_id"
            android:textColor="@color/black"
            android:textSize="@dimen/main_page_label_size" />
        -->

        <TextView
            android:id="@+id/txtMsgTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1.40"
            android:background="@drawable/roundedbg_black"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="3dp"
            android:paddingTop="10dp"
            android:text="@string/msg_datetime"
            android:textColor="@color/white"
            android:textSize="@dimen/main_page_label_size" />

        <TextView
            android:id="@+id/tv_index"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="0.63"
            android:background="@drawable/roundedbg_black"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="3dp"
            android:paddingTop="10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/main_page_label_size" />


    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"/>
    
    <!-- <RelativeLayout
        android:id="@+id/indicator_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        
        <ImageView
            android:id="@+id/imgNetworkStatus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:background="@null"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:visibility="visible"
            />
        <ImageView
            android:id="@+id/imgBatteryLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:background="@color/white"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:visibility="visible"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout> -->

    <RelativeLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnBackToList"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginBottom="2dp"
                android:background="@color/transparent_black"
                android:gravity="center"
                android:text="@string/back_to_list"
                android:textColor="@color/white"
                android:textSize="@dimen/main_page_menu_size" />

            <Button
                android:id="@+id/btnSetting"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginBottom="2dp"
                android:background="@color/transparent_black"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="@color/white"
                android:textSize="@dimen/main_page_menu_size" />

            <Button
                android:id="@+id/btnContactUs"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginBottom="2dp"
                android:background="@color/transparent_black"
                android:gravity="center"
                android:text="@string/contact_us"
                android:textColor="@color/white"
                android:textSize="@dimen/main_page_menu_size" />

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginBottom="2dp"
                android:background="@color/transparent_black"
                android:gravity="center"
                android:text="@string/btn_logout"
                android:textColor="@color/white"
                android:textSize="@dimen/main_page_menu_size" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>