<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/itt_messaging"
        android:textColor="@color/black"
        android:textSize="@dimen/activate_page_title_size"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:visibility="gone"            
            android:id="@+id/tv_not_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/not_support"
            android:textColor="@android:color/black"
            android:textSize="@dimen/activate_page_button_size" />

        <Button
            android:id="@+id/btnActivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/roundedbutton"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/activiate"
            android:textColor="@color/white"
            android:textSize="@dimen/activate_page_button_size"
            android:alpha="0.3"/>

        <ImageView
            android:id="@+id/imgMqttVerified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/btnActivate"
            android:src="@drawable/green_tick"
            android:layout_marginLeft="16dp"
            android:visibility="visible"/>
        
        <ProgressBar
            android:id="@+id/pbHeaderProgress"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btnActivate"
            android:layout_alignTop="@+id/btnActivate"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/btnActivate"/>

        <TextView
            android:id="@+id/activity_activate_tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/btnActivate"
            android:layout_marginRight="14dp"
            android:text="V0.0"
            android:textAppearance="?android:attr/textAppearanceSmall" />


    </RelativeLayout>

</LinearLayout>